--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -1,4 +1,4 @@
-#ELEMENTOS DEL DESARROLLO DE SOFTWARE
+# ELEMENTOS DEL DESARROLLO DE SOFTWARE
 
 
 
@@ -147,7 +147,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 ### Modelo en cascada (I)
 
-![Modelo en cascada](assets/cascada.png)
+![Modelo en cascada](Img/cascada.png)
 
 
 ### Modelo en cascada (II)
@@ -162,7 +162,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 ### Modelo en V (I)
 
-![Modelo en V](assets/v.png)
+![Modelo en V](Img/v.png)
 
 
 ### Modelo en V (II)
@@ -181,7 +181,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - por no existir experiencia previa.
   - por omisión o falta de concreción del usuario/cliente.
 
-![Modelo de construcción de prototipos](assets/prototipos.png)
+![Modelo de construcción de prototipos](Img/prototipos.png)
 
 
 ### Prototipos (II)
@@ -207,7 +207,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 - Desarrollado por Boehm en 1988.
 - La actividad de ___ingeniería___ corresponde a las fases de los modelos clásicos: análisis, diseño, codificación, ...
 
-![Modelo en espiral](assets/espiral.png)
+![Modelo en espiral](Img/espiral.png)
 
 
 ### Modelo en espiral (II)
@@ -215,7 +215,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 - En la actividad de ___ingeniería___ se da gran importancia a la reutilización de código.
 
-![Modelo en espiral](assets/espiral-poo.png)
+![Modelo en espiral](Img/espiral-poo.png)
 
 
 ### Metodologías ágiles (I)
@@ -253,7 +253,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 Pizarra kanban
 
-![Pizarra kanban](assets/kanban-board.png)
+![Pizarra kanban](Img/kanban-board.png)
 
 
 #### __Scrum (I)__
@@ -267,7 +267,7 @@ Pizarra kanban
 
 #### __Scrum (II)__
 
-![Proceso SCRUM](assets/scrum.png)
+![Proceso SCRUM](Img/scrum.png)
 
 
 #### __XP (Programación extrema) (I)__
