--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -303,15 +303,15 @@ __Características__
 ###  Obtención de código ejecutable
 
 - Para obtener código binario ejecutable tenemos 2 opciones:
-  - __Compilar__
+  - __Compilar__ (Crea archivo ejecutable)
   - __Interpretar__
 
 
 ### Proceso de compilación/interpretación
 
 - La compilación/interpretación del código fuente se lleva a cabo en dos fases:
-  1. __Análisis léxico__
-  2. __Análisis sintáctico__
+  1. __Análisis léxico__ (Comprobar ortografía)
+  2. __Análisis sintáctico__ (Comprobar orden correcto de las palabras)
 - Si no existen errores, se genera el código objeto correspondiente.
 - Un código fuente correctamente escrito no significa que funcione según lo deseado.
 - No se realiza un análisis semántico.
@@ -386,7 +386,7 @@ __Características__
 ### Evolución
 
 - Código binario
-- Ensamblador 
+- Ensamblador (mnemotecnico)
 - Lenguajes estructurados 
 - Lenguajes orientados a objetos
 
