--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -328,13 +328,13 @@ __Características__
 
 - Ejemplos: PHP, Javascript
 - Principal ventaja: El código fuente se interpreta directamente.
-- Principal desventaja: Ejecución menos eficiente.
+- Principal desventaja: Ejecución menos eficiente (Mas lenta).
 
 
 ### JAVA (I)
 
 - Lenguajes compilado e interpretado.
-- El código fuente Java __se compila__ y se obtiene un código binario intermedio denominado __bytecode__. 
+- El código fuente Java __se compila__ y se obtiene un código binario intermedio denominado __bytecode__(.class). 
 - Puede considerarse código objeto pero destinado a la máquina virtual de Java en lugar de código objeto nativo. 
 - Después este __bytecode__ __se interpreta__ para ejecutarlo.
 
@@ -346,7 +346,7 @@ __Características__
   - Relativamente fácil de aprender
   - Buena documentación y base de usuarios 
 - Desventajas:
-  - Menos eficiente que los lenguajes compilados 
+  - Menos eficiente que los lenguajes compilados(Ejecución más lenta) 
 
 
 ### Tipos (I)
@@ -358,7 +358,7 @@ __Características__
 
 ### Tipos (II)
 
-- Tipos de __lenguajes declarativos__:
+- Tipos de __lenguajes declarativos__(Se utilizan poco salvo SQL):
   - Lógicos: Utilizan reglas. Ej: Prolog
   - Funcionales: Utilizan funciones. Ej: Lisp, Haskell
   - Algebraicos: Utilizan sentencias. Ej: SQL
@@ -370,25 +370,25 @@ __Características__
 - Tipos de __lenguajes imperativos__:
   - Estructurados: C
   - Orientados a objetos: Java
-  - Multiparadigma: C++, Javascript
+  - Multiparadigma(Pueden trabajar de varias formas): C++, Javascript
 - Los lenguajes orientados a objetos son también lenguajes estructurados. 
 - Muchos de estos lenguajes son compilados.
 
 
 ### Tipos (IV)
 
-- Tipos de lenguajes según nivel de abstracción: 
-  - Bajo nivel: ensamblador
+- Tipos de lenguajes según nivel de abstracción(Según la pontencia de las instrucciones): 
+  - Bajo nivel(Cada operacion tiene su instrucción): ensamblador
   - Medio nivel: C
-  - Alto nivel: C++, Java
+  - Alto nivel(Utiliza menos instrucciones para el mismo resultado): C++, Java
 
 
 ### Evolución
 
-- Código binario
+- Código binario(0 y 1)
 - Ensamblador (mnemotecnico)
 - Lenguajes estructurados 
-- Lenguajes orientados a objetos
+- Lenguajes orientados a objetos(Organiza el código en clases)
 
 
 ### Historia simplificada
@@ -403,11 +403,11 @@ __Características__
 
 ### Criterios para la selección de un lenguaje
 
-- Campo de aplicación
-- Experiencia previa
-- Herramientas de desarrollo
+- Campo de aplicación (Tipo de aplicación que vamos a desarrollar)
+- Experiencia previa (Tendencia a usar lenguajes que conoces)
+- Herramientas de desarrollo (Compiladores, entornos de desarrollo, etc)
 - Documentación disponible
-- Base de usuarios
-- Reusabilidad
-- Transportabilidad
+- Base de usuarios (Mas ayuda)
+- Reusabilidad (Poder utiluzar códigos pre-hechos, bibliotecas)
+- Transportabilidad (Que funcione en muchas plataformas)
 - Imposición del cliente
