--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -32,13 +32,13 @@ En esta Unidad aprenderemos a:
 
 ### Conceptos
 
-- Codigo fuente
-- Codigo intermedio u objeto
+- Codigo fuente (Texto legible en lenguaje de programación)
+- Codigo intermedio u objeto (Binario que no se ejecuta)
 - Codigo binario
-- Bibliotecas (librerías)
-- Compilar
-- Enlazar (Link)
-- Interpretar
+- Bibliotecas (librerías) (Serie de archivos con código fuente que se puede distribuir)
+- Compilar (Coger código fuente y traducirlo a código objeto)
+- Enlazar (Link) (Coger varios archivos objetos y juntarlos todos para crear ejecutable)
+- Interpretar (se traduce a código binario y se ejecuta en el momento, no genera archivo)
 
 
 
