--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -83,7 +83,7 @@ En esta Unidad aprenderemos a:
 - Tipos
   - bibliotecas dinámicas (.DLL o .so) (.jar en Java)
     - muy usadas
-  - bibliotecas estática (.LIB o .a)
+  - bibliotecas estáticas (.LIB o .a) 
     - menos usadas actualmente
 
 
