--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -22,10 +22,10 @@ En esta Unidad aprenderemos a:
 ### Conceptos
 
 - Codigo fuente (Texto legible en lenguaje de programación)
-- Codigo intermedio u objeto (Binario que no se ejecuta)
+- Codigo intermedio u objeto (Binario que no se ejecuta. En Linux la extensión es .o y en Windows la extensión es .obj. En Java sería el bytecode .class)
 - Codigo binario
-- Bibliotecas (librerías) (Serie de archivos con código fuente que se puede distribuir)
-- Compilar (Coger código fuente y traducirlo a código objeto)
+- Bibliotecas (librerías) (Serie de archivos que amplian la funcionalidad del lenguaje con código fuente que se puede distribuir)
+- Compilar (Coger código fuente y traducirlo a código objeto genera archivo ejecutable)
 - Enlazar (Link) (Coger varios archivos objetos y juntarlos todos para crear ejecutable)
 - Interpretar (se traduce a código binario y se ejecuta en el momento, no genera archivo)
 
@@ -37,10 +37,11 @@ En esta Unidad aprenderemos a:
 ### Lo básico
 
 - Editor de texto: permite escribir código fuente
-- Compilador: genera código objeto a partir del código fuente
-- Enlazador: agrupa varios archivos objeto en uno binario
+- Compilador: genera código objeto a partir del código fuente (Genera archivo ejecutable)
+- Enlazador: agrupa varios archivos objeto en uno binario para crear archivo ejecutable
 - Interprete: lee código fuente y genera código binario para su ejecución
 
+Los intérpretes se diferencian de los compiladores o de los ensambladores en que mientras estos traducen un programa desde su descripción en un lenguaje de programación al código de máquina del sistema, los intérpretes sólo realizan la traducción a medida que sea necesaria, típicamente, instrucción por instrucción, y normalmente no guardan el resultado de dicha traducción.
 
 ### Bibliotecas (o librerías) (I)
 
@@ -70,9 +71,27 @@ En esta Unidad aprenderemos a:
 
 - Cada biblioteca está compuesta por varios archivos objeto
 - Tipos
-  - bibliotecas dinámicas (.DLL o .so) (.jar en Java)
+  - bibliotecas dinámicas (En windows .DLL o .so en linux) (.jar en Java) enlazado dinámico NO incluye el código de la biblioteca dentro del programa que hace uso de ella. En su lugar se realiza un vínculo a la biblioteca dinámica.
+
+Ventajas:
+  - al tener bibliotecas separadas se puede actualizar independientemente del ejecutable, y el ejecutable se actualiza también, no hace falta recompilar.
+  - El ejecutable es más pequeño.
+  - Las bibliotecas se pueden compartir entre programas y así ahorramos espacio en disco.
+  - Las bibliotecas están separadas del ejecutable.
+Desventajas:
+  -No es un programa autocontenido (al programa le hacen falta las bibliotecas para poder funcionar)
+  -Las actualizaciones de la biblioteca le afectan para bien y para mal.
     - muy usadas
-  - bibliotecas estáticas (.LIB o .a) 
+  - bibliotecas estáticas (En windows .LIB o .a en Linux) El enlazado estático incluye el código de la biblioteca dentro del programa que hace uso de ella
+
+Ventajas:
+  -Programa autocontenido.
+  -Las actualizaciones de la biblioteca no le afectan.
+Desventajas:
+  -Las bibliotecas están junto al ejecutable.
+  - Es que el ejecutable es más grande.
+  - Aumenta el espacio en disco.
+  - Si modificamos la biblioteca tenemos que volver a compilar todos los programas que utilizan esa biblioteca.
     - menos usadas actualmente
 
 
@@ -82,7 +101,7 @@ En esta Unidad aprenderemos a:
   - Especificación (ofrece una API)
   - Implementación 
 
-__API__ = Interfaz de Programación de Aplicaciones
+__API__ = Interfaz de Programación de Aplicaciones (clases y métodos que se pueden utilizar)
 
 
 ### Entorno necesario en java
@@ -91,7 +110,7 @@ __API__ = Interfaz de Programación de Aplicaciones
   - JVM (inteprete java)
   - Biblioteca estándar
 - JDK: necesario para desarrollar programas
-  - Herramientas: javac, jar, javadoc, ...
+  - Herramientas: javac, jar(Empaquetar), javadoc, ...
 
 
 ### Construir (Build) (I) 
@@ -99,7 +118,7 @@ __API__ = Interfaz de Programación de Aplicaciones
 > Construir (Build) = Compilar + Enlazar
 
 - Dos opciones:
- - Herramientas de construcción
+ - Herramientas de construcción (Equipo local)
  - Servidor de construcción
 
 
@@ -117,9 +136,9 @@ __API__ = Interfaz de Programación de Aplicaciones
 
   - make: __Makefile__
   - ninja: __build.ninja__
-  - ant: __build.xml__
-  - maven: __pom.xml__
-  - gradle: __build.gradle__
+  - ant: __build.xml__ (Netbeans)
+  - maven: __pom.xml__ (Eclipse)
+  - gradle: __build.gradle__ (Visual Studio)
   - grunt: __Gruntfile.js__
   - gulp: __gulpfile.js__
   - rake: __Rakefile__
@@ -127,14 +146,14 @@ __API__ = Interfaz de Programación de Aplicaciones
 
 ### Construir (Build) (IV) 
 
-- Generadores de archivos de construcción
+- Generadores de archivos de construcción (Herramienta archivo asociado)
   - CMake: CMakeLists.txt
   - Meson: meson.build  
 
 
 ### Construir (Build) (V) 
 
- - Servidores de construcción
+ - Servidores de construcción (Integración continua)
   - Jenkins 
   - TravisCI
   - CircleCI
