--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -23,7 +23,7 @@ En esta Unidad aprenderemos a:
 
 - Codigo fuente (Texto legible en lenguaje de programación)
 - Codigo intermedio u objeto (Binario que no se ejecuta. En Linux la extensión es .o y en Windows la extensión es .obj. En Java sería el bytecode .class)
-- Codigo binario
+- Codigo binario (Ejecutable)
 - Bibliotecas (librerías) (Serie de archivos que amplian la funcionalidad del lenguaje con código fuente que se puede distribuir)
 - Compilar (Coger código fuente y traducirlo a código objeto genera archivo ejecutable)
 - Enlazar (Link) (Coger varios archivos objetos y juntarlos todos para crear ejecutable)
@@ -47,13 +47,13 @@ Los intérpretes se diferencian de los compiladores o de los ensambladores en qu
 
 > Conjunto de archivos objeto que extienden la funcionalidad del lenguaje
 
-- __Biblioteca estándar__ del lenguaje
-- __Bibliotecas adicionales__
+- __Biblioteca estándar__ todos los lenguajes tienen una
+- __Bibliotecas adicionales__ hay muchas
 
 
 ### Bibliotecas (o librerías) (II)
 
-- __Biblioteca estándar del lenguaje C__
+- __Biblioteca estándar del lenguaje C__ (Es muy pequeña)
   - Entrada y salida por terminal
   - Manejo de archivos
   - Funciones matemáticas
@@ -89,10 +89,10 @@ Ventajas:
   -Las actualizaciones de la biblioteca no le afectan.
 Desventajas:
   -Las bibliotecas están junto al ejecutable.
-  - Es que el ejecutable es más grande.
+  - No se pueden compartir entre programas
   - Aumenta el espacio en disco.
   - Si modificamos la biblioteca tenemos que volver a compilar todos los programas que utilizan esa biblioteca.
-    - menos usadas actualmente
+  - menos usadas actualmente
 
 
 ### Bibliotecas (o librerías) (IV)
